Fixed fieldset legend font-size to align with label font-size

--- a/assets/src/scss/app.scss
+++ b/assets/src/scss/app.scss
@@ -120,6 +120,12 @@ textarea.form-control {
     height: 5em;
 }
 
+.formbuilder-form {
+    legend.form-label {
+        font-size: 1rem;
+    }
+}
+
 
 header {
     padding-top: 15px;
